gen/jobs/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-jobs2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/jobs/v2/lib)
error[E0423]: expected value, found struct `jobs::JobsActions`
    --> gen/jobs/v2/lib/src/lib.rs:4517:13
     |
4517 |             jobs::JobsActions
     |             ^^^^^^^^^^^^^^^^^ did you mean `jobs::JobsActions { /* fields */ }`?

warning: unreachable expression
   --> gen/jobs/v2/lib/src/lib.rs:669:13
    |
669 | /             Ok(match value {
670 | |                 _ => {
671 | |                     return Err(::serde::de::Error::custom(format!(
672 | |                         "invalid enum for #name: {}",
...   |
675 | |                 }
676 | |             })
    | |______________^
    |
    = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:1541:13
     |
1541 | /             Ok(match value {
1542 | |                 _ => {
1543 | |                     return Err(::serde::de::Error::custom(format!(
1544 | |                         "invalid enum for #name: {}",
...    |
1547 | |                 }
1548 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:1946:13
     |
1946 | /             Ok(match value {
1947 | |                 _ => {
1948 | |                     return Err(::serde::de::Error::custom(format!(
1949 | |                         "invalid enum for #name: {}",
...    |
1952 | |                 }
1953 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:2042:13
     |
2042 | /             Ok(match value {
2043 | |                 _ => {
2044 | |                     return Err(::serde::de::Error::custom(format!(
2045 | |                         "invalid enum for #name: {}",
...    |
2048 | |                 }
2049 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:2351:13
     |
2351 | /             Ok(match value {
2352 | |                 _ => {
2353 | |                     return Err(::serde::de::Error::custom(format!(
2354 | |                         "invalid enum for #name: {}",
...    |
2357 | |                 }
2358 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:2387:13
     |
2387 | /             Ok(match value {
2388 | |                 _ => {
2389 | |                     return Err(::serde::de::Error::custom(format!(
2390 | |                         "invalid enum for #name: {}",
...    |
2393 | |                 }
2394 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:2423:13
     |
2423 | /             Ok(match value {
2424 | |                 _ => {
2425 | |                     return Err(::serde::de::Error::custom(format!(
2426 | |                         "invalid enum for #name: {}",
...    |
2429 | |                 }
2430 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:2761:13
     |
2761 | /             Ok(match value {
2762 | |                 _ => {
2763 | |                     return Err(::serde::de::Error::custom(format!(
2764 | |                         "invalid enum for #name: {}",
...    |
2767 | |                 }
2768 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:2797:13
     |
2797 | /             Ok(match value {
2798 | |                 _ => {
2799 | |                     return Err(::serde::de::Error::custom(format!(
2800 | |                         "invalid enum for #name: {}",
...    |
2803 | |                 }
2804 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:3157:13
     |
3157 | /             Ok(match value {
3158 | |                 _ => {
3159 | |                     return Err(::serde::de::Error::custom(format!(
3160 | |                         "invalid enum for #name: {}",
...    |
3163 | |                 }
3164 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:3193:13
     |
3193 | /             Ok(match value {
3194 | |                 _ => {
3195 | |                     return Err(::serde::de::Error::custom(format!(
3196 | |                         "invalid enum for #name: {}",
...    |
3199 | |                 }
3200 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:7175:17
     |
7175 | /                 Ok(match value {
7176 | |                     _ => {
7177 | |                         return Err(::serde::de::Error::custom(format!(
7178 | |                             "invalid enum for #name: {}",
...    |
7181 | |                     }
7182 | |                 })
     | |__________________^

warning: unreachable expression
    --> gen/jobs/v2/lib/src/lib.rs:7211:17
     |
7211 | /                 Ok(match value {
7212 | |                     _ => {
7213 | |                         return Err(::serde::de::Error::custom(format!(
7214 | |                             "invalid enum for #name: {}",
...    |
7217 | |                     }
7218 | |                 })
     | |__________________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-jobs2`.

To learn more, run the command again with --verbose.
